@@ -91,7 +91,7 @@ proc issue_126_setup  {} {
 
 proc issue_126_check {} {
    global CHECK_OUTPUT CHECK_PRODUCT_ROOT CHECK_ARCH CHECK_ACTUAL_TEST_PATH
-   global host1
+   global CHECK_HOST
 
    # 
    # Scenario
@@ -120,10 +120,16 @@ proc issue_126_check {} {
    #
    # 1
    #
+
+   set host1 $CHECK_HOST
+   puts $CHECK_OUTPUT "using host $host1"
+
    set queue1(qname) "q1"
    set queue1(hostname) "$host1"
    set queue1(slots) "1"
    set queue1(seq_no) "1"
+   set queue1(load_thresholds)    "np_load_avg=7.00"
+   set queue1(suspend_thresholds) "np_load_avg=7"
    set queue1(prolog) "${CHECK_ACTUAL_TEST_PATH}/sleep.sh"
    set result [ add_queue queue1 ]
    if { ($result != 0)  } {
@@ -134,6 +140,8 @@ proc issue_126_check {} {
    set queue2(hostname) "$host1"
    set queue2(slots) "1"
    set queue2(seq_no) "2"
+   set queue2(load_thresholds)    "np_load_avg=7.00"
+   set queue2(suspend_thresholds) "np_load_avg=7"
    set queue2(subordinate_list) "q1"
    set result [ add_queue queue2 ]
    if { ($result != 0)  } {
